--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html lang="pt-BR" xml:lang="pt-BR">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="x-apple-disable-message-reformatting" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="color-scheme" content="light dark" />
+	<meta name="supported-color-schemes" content="light dark" />
 
-	<style type="text/css">
+	<style type="text/css" rel="stylesheet" media="all">
+		:root {
+			color-scheme: light dark;
+			supported-color-schemes: light dark;
+		}
+		
 		body,
 		p,
 		ul,
@@ -255,11 +263,6 @@
 		}
 
 	</style>
-
-	<meta name="x-apple-disable-message-reformatting">
-
-	<meta name="color-scheme" content="light dark">
-	<meta name="supported-color-schemes" content="light dark">
 </head>
 <body>
 	<div class="newsletter-container">
