--- a/index.html
+++ b/index.html
@@ -222,9 +222,13 @@
 			small,
 			h1,
 			h2,
-			h3 {
+			h3,
+			code {
 				color: #f5f5f5;
 				background-color: #181818;
+			}
+			code {
+				background-color: #2b2b2b;
 			}
 
 			.oferecimento {
